Don't treat an empty value attribute as null on image input types

If value="" is specified on an image-type form control then use "" as the alt-text
for the control if one is required. This matches Firefox and Edge, also IE11.

BUG=625604

Review-Url: https://codereview.chromium.org/2127093004
Cr-Commit-Position: refs/heads/master@{#404571}

Former-commit-id: 350b1fecbdea7310b122e3e83c67929fa282d754